--- a/Gallery/Gallery.csproj
+++ b/Gallery/Gallery.csproj
@@ -57,6 +57,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ImagePathConverter.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="ToolsMenu.xaml.cs">
       <DependentUpon>ToolsMenu.xaml</DependentUpon>
     </Compile>
